--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Hello Coursera</title>
   </head>
   <body>
-    <h1>ursera</h1>
+    <h1>I am trilled about this course</h1>
   </body>
 </html>
